--- a/style.css
+++ b/style.css
@@ -1,59 +1,454 @@
+/* リセットcss */
+html, body, div, span, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+abbr, address, cite, code,
+del, dfn, em, img, ins, kbd, q, samp,
+small, strong, sub, sup, var,
+b, i,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section, summary,
+time, mark, audio, video {
+    margin:0;
+    padding:0;
+    border:0;
+    outline:0;
+    font-size:100%;
+    vertical-align:baseline;
+    background:transparent;
+}
 
+body {
+    line-height:1;
+}
 
-.contact{
+article,aside,details,figcaption,figure,
+footer,header,hgroup,menu,nav,section {
+    display:block;
+}
+
+nav ul {
+    list-style:none;
+}
+
+blockquote, q {
+    quotes:none;
+}
+
+blockquote:before, blockquote:after,
+q:before, q:after {
+    content:'';
+    content:none;
+}
+
+a {
+    margin:0;
+    padding:0;
+    font-size:100%;
+    vertical-align:baseline;
+    background:transparent;
+}
+
+/* change colours to suit your needs */
+ins {
+    background-color:#ff9;
+    color:#000;
+    text-decoration:none;
+}
+
+/* change colours to suit your needs */
+mark {
+    background-color:#ff9;
+    color:#000;
+    font-style:italic;
+    font-weight:bold;
+}
+
+del {
+    text-decoration: line-through;
+}
+
+abbr[title], dfn[title] {
+    border-bottom:1px dotted;
+    cursor:help;
+}
+
+table {
+    border-collapse:collapse;
+    border-spacing:0;
+}
+
+/* change border colour to suit your needs */
+hr {
+    display:block;
+    height:1px;
+    border:0;  
+    border-top:1px solid #cccccc;
+    margin:1em 0;
+    padding:0;
+}
+
+input, select {
+    vertical-align:middle;
+}
+
+/* その他のスタイルは以下に記述していきます */
+.header{
+    background: #000;
+    height: 70px;
+}
+.header-wrap{
+    height: 70px;
+    justify-content: space-between;
+    display: flex;
+    align-items: center;
+}
+.header-logo{
+color: #f2f2f2;
+font-weight: bold;
+margin-left: 35px;
+line-height: 70px;
+}
+
+.header-nav{
+    margin-left: auto;
+}
+
+.header-nav ul{
+  display: flex;
+}
+
+.header-nav li{
+    margin-right: 30px;
+    font-size: 15px;
+}
+
+.header-nav a{
+color: #f2f2f2;
+}
+/* ここまでがヘッダー */
+
+#estra{
+    height: 600px;
+  background: url(img/eyecatch.jpg)no-repeat;
+background-size: cover;
+background-position: center;
 position: relative;
 }
 
-.contact img{
-padding-top: 20%;
-width:1440px ;
-height: 500px;
-background-position: center;
+#estra h1{
+    color: #f2f2f2;
+    font-weight: bold;
+    font-size: 50px;
+    position: absolute;
+    top: 50%;
+    left: 20%;
+    transform: translate(-20%,50%);
 }
 
-.contact-ttl{
+.news{
+background-color: #f2f2f2;
+width: 700px;
+height: 60px;
+position: absolute;
+top: 90%;
+right: 0%;
+}
+
+.news-wrap{
+    display: flex;
+}
+
+.news-title{
+    display: inline-block;
+    margin-left: 10px;
+}
+
+.news-right{
+    background-color: #000;
+    color: #f2f2f2;
+    width: 155px;
+    height: 40px;
+    text-align: center;
+    padding-top: 25px;
+    margin-left: 70px;
+}
+
+#mission{
+    background: #000;
+    height: 400px;
+    
+    
+}
+
+#mission img{
+    width: 500px;
+  padding-top: 90px;
+  padding-right: 50px;
+    float: right;
+position: relative;
+}
+
+.mission2{
+    width: 67%;
+padding-top: 90px;
+padding-left: 15%;
+position: absolute;
+}
+
+.mission-sub{
+    color: #fff;
+    font-size: 30px;
+}
+
+ .mission-text{
 
 color: #fff;
-position: absolute;
-top: 55%;
-left: 5%;
-line-height: 30px;
-text-align: center;
+margin-top: 30px;
+
+line-height: 1.5;
+
 }
 
-.contact1{
-font-size: 30px;
-}
-
-.contact2{
+.mission-link{
+background-color: #fff;
+color: #000;
+width: 120px;
 display: block;
-font-size: 15px;
-}
-
-.contact3{
-font-size: 30px;
-margin-top: 10px;
-}
-
-.contact4{
 margin-top: 20px;
-margin-bottom: 20px;
-}
-
-.contact-link{
-border: solid 1px #fff;
 padding: 10px;
 }
 
+.white{
+    background: #fff;
+    height: 80px;
+}
+
+.service{
+    background: #d3d3d3;
+    height: 900px;
+}
+
+.service-title{
+    padding: 20px;
+    text-align: center;
+    font-size: 30px;
+}
+
+.service img{
+  width: 700px;
+  background-position: center;
+  position: relative;
+float: right;
+}
+
+.card{
+background: #fff;
+width: 600px;
+height: 200px;
+position: absolute;
+padding: 50px 30px;
+margin: 60px 15%;
+text-align: left;
+}
+
+.card-title{
+margin: 20px;
+}
+
+.card-sub{
+margin: 20px;
+}
+
+.card-text{
+    width: 98%;
+    line-height:20px;
+    margin: 20px;
+
+}
+
+
+.card-link{
+border: solid 1px #000 ;
+width: 100px;
+padding: 10px;
+margin-left: 80%;
+}
+
+.service2{
+    background: #d3d3d3;
+    height: 600px;
+}
+
+.service2 img{
+    width: 700px;
+    background-position: center;
+    position: relative;
+    float: left;
+}
+
+.card2{
+    background: #fff;
+    width: 600px;
+    height: 200px;
+    position: absolute;
+    padding: 50px 30px 40px 40px;
+    margin: 60px 35%;
+    text-align: left;
+    }
+    
+    .card-title2{
+    margin: 20px;
+    }
+    
+    .card-sub2{
+    margin: 20px;
+    }
+    
+    .card-text2{
+        width: 98%;
+        line-height:20px;
+        margin: 20px;
+    
+    }
+    
+    
+    .card-link2{
+    border: solid 1px #000 ;
+    width: 100px;
+    padding: 10px;
+    margin-left: 80%;
+    }
+    
+    .overview{
+        background: #ffff;
+        height: 400px;
+        position: relative;
+    }
+
+    .overview-flex{
+        display: flex;
+    }
+
+    .img{
+        width: 900px;
+        margin-top: 10%;
+        height: 200px;
+        padding-right: 30px ;
+        background-position: center;
+    }
+
+    .img2{
+        width: 900px;
+        margin-top: 10%;
+        height: 200px;
+        padding-left: 30px  ;
+        background-position: center;
+    }
+
+    .company{
+        font-size: 30px;
+        color: #fff;
+        position: absolute;
+     top: 55%;
+     left: 20%;
+    }
+
+    .com-br{
+        margin:10px 30px ;
+     font-size: 15px;
+        display: block
+    }
+
+
+    .recruit{
+        font-size: 30px;
+        color: #fff;
+        position: absolute;
+        top: 55%;
+        right: 20%;
+    }
+
+.rec-br{
+margin:10px 25px;
+    font-size: 15px;
+    display: block;
+}
+
+.faq{
+    background: #000;
+    width: 800px;
+    height: 100px;
+    margin: 80px 20%;
+    display: flex;
+}
+
+.faq-left{
+color: #fff;
+font-size: 30px;
+margin: 40px 30px;
+}
+
+.faq-right{
+color: #fff;
+margin: 50px 30%;
+}
+
+.contact{
+    position: relative;
+    background-image: url(./img/contact-bg.jpg);
+    height: 400px;
+    width: 100%;
+    padding-top: 20%;
+    margin-top: 20%;
+    background-position: center;
+}
+
+.contact-ttl{
+    color: #fff;
+    position: absolute;
+    top: 35%;
+    left: 5%;
+    line-height: 30px;
+    text-align: center;
+}
+
+.contact1{
+    font-size: 30px;
+}
+
+.contact2{
+    display: block;
+    font-size: 15px;
+}
+
+.contact3{
+    font-size: 30px;
+    margin-top: 10px;
+}
+
+.contact4{
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+.contact-link{
+    border: solid 1px #fff;
+    padding: 10px;
+}
+
 .footer{
-background: #000;
-height: 90px;
-text-align: center;
+    background: #000;
+    height: 90px;
+    text-align: center;
+    margin-top: 0%;
 }
 .footer-wrap{
-height: 70px;
-display: flex;
-justify-content: space-between;
+    height: 70px;
+    display: flex;
+    justify-content: space-between;
 
 }
 .footer-logo{
@@ -64,13 +459,13 @@ line-height: 70px;
 }
 
 .footer-nav ul{
-margin-top: 20px;
+    margin-top: 20px;
 display: flex;
 }
 
 .footer-nav li{
-margin-right: 30px;
-font-size: 15px;
+    margin-right: 30px;
+    font-size: 15px;
 }
 
 .footer-nav a{
@@ -78,6 +473,6 @@ color: #f2f2f2;
 }
 
 .copyright{
-color: #fff;
+    color: #fff;
 
 }
