--- a/style.css
+++ b/style.css
@@ -126,8 +126,8 @@ line-height: 70px;
 }
 
 .header-nav a{
-    color: #f2f2f2;
-    text-decoration: none;
+color: #f2f2f2;
+text-decoration: none;
 }
 /* ここまでがヘッダー */
 
@@ -324,36 +324,38 @@ margin-left: 80%;
     }
     
     .overview{
-        background: #ffff;
+        background: #fff;
         height: 400px;
-        position: relative;
     }
 
     .overview-flex{
-        display: flex;
+display: flex;
+position: relative;
+margin-top: 10%;
     }
 
     .img{
+        margin: 0%;
         width: 100%;
-        margin-top: 10%;
         height: 200px;
         padding-right: 30px ;
         background-position: center;
     }
 
     .img2{
+        margin: 0%;
+        position: relative;
         width: 100%;
-        margin-top: 10%;
         height: 200px;
-        padding-left: 30px  ;
+        padding-left: 30px;
         background-position: center;
     }
 
     .company{
+        position: absolute;
         font-size: 30px;
         color: #fff;
-        position: absolute;
-     top: 55%;
+     top: 40%;
      left: 20%;
     }
 
@@ -365,11 +367,10 @@ margin-left: 80%;
 
 
     .recruit{
-        position: absolute;
-        text-align: center;
+    position: absolute;
         font-size: 30px;
         color:#fff;
-        top: 50%;
+        top: 30%;
         right: 22%;
         transform: translate(40%,40%);
     }
@@ -405,7 +406,7 @@ margin: 50px 30%;
     height: 400px;
     width: 100%;
     padding-top: 20%;
-    margin-top: 20%;
+    margin-top: 10%;
     background-position: center;
 }
 
